# celeste-image-edit

./: .gitignore  CLAUDE.md  example.py  pyproject.toml
Notebooks/: google.py.ipynb
src/celeste_image_edit/: __init__.py  base.py  mapping.py
src/celeste_image_edit/core/: config.py  enums.py  types.py
src/celeste_image_edit/providers/: __init__.py  google.py  openai.py  replicate.py
